# xiaoming-datahelper

./: README.md  pyproject.toml
examples/: basic_usage.py  sample_data.csv
scripts/: activate_env.sh  build.sh  clean.sh  upload.sh
src/datahelper/: __init__.py
src/datahelper/core/: processor.py  reader.py
tests/: test_reader.py
tests/test_data/: test_data.csv
