[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xiaoming-datahelper"
version = "0.1.3"
description = "一个简单的数据处理工具包"
authors = [{ name = "小明", email = "xiaoming@example.com" }]
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = ["pandas>=1.0.0", "numpy>=1.18.0"]

[project.optional-dependencies]
dev = ["pytest>=6.0", "black>=21.0"]

[project.urls]
Homepage = "https://github.com/examples/xiaoming-datahelper"
